feat: deploy portfolio v1.0 This is my portfolio - a complete showcase of my HTML and CSS skills with responsive design and modern styling. Ready to share with employers.

--- a/Project-MianTerm/index.html
+++ b/Project-MianTerm/index.html
@@ -3,8 +3,123 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>Portfolio Fateme Rad</title>
+
     <link rel="stylesheet" href="./assets/Css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="section">
+      <div class="gradient-shape shape-1"></div>
+      <div class="gradient-shape shape-2"></div>
+      <div class="gradient-shape shape-3"></div>
+      <div class="gradient-shape shape-4"></div>
+      <div class="gradient-shape shape-5"></div>
+    </div>
+
+    <div class="container">
+      <header>
+        <div class="box-portrait">
+          <div class="portrait-placeholder">
+            <img class="img" src="assets/img/image me.png" alt="Portrait-img" />
+          </div>
+        </div>
+        <div class="About-me">
+          <h1>About me</h1>
+        </div>
+      </header>
+      <div class="card full-width">
+        <p class="intro-text">Hi!</p>
+        <p class="intro-text">My name is Fateme Rad.</p>
+        <p class="intro-text">
+          I am a Front-End Developer and UI/UX Designer based in Mashhad, Iran
+          with experience through projects and subjects in university. My
+          objective: Challenge myself in a new environment to learn, develop,
+          improve my skills through different projects and contribute more to
+          the company with my abilities.
+        </p>
+      </div>
+
+      <div class="main-content">
+        <div class="card">
+          <h2>Contact</h2>
+          <div class="contact-info">
+            <div class="contact-item">
+              <span>Fatemeradd75@gmail.com</span>
+            </div>
+            <div class="contact-item">
+              <span>091522039</span>
+            </div>
+            <div class="contact-item">
+              <span>https://github.com/FatemeRadd</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <h2>Education</h2>
+          <div class="education-item">
+            <h3>University Alzahra - Software Engineer</h3>
+            <p>2025 - Now</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <h2>Soft Skills</h2>
+          <div class="skill-list">
+            <div class="skill-tag">Critical Thinking</div>
+            <div class="skill-tag">Communication</div>
+            <div class="skill-tag">Time Management</div>
+            <div class="skill-tag">Teamwork</div>
+          </div>
+        </div>
+
+        <div class="card">
+          <h2>Technical Skills</h2>
+          <div class="skills-grid">
+            <div class="skill-category">
+              <h3>Design Tools</h3>
+              <div class="skill-list">
+                <div class="skill-tag">Ps</div>
+                <div class="skill-tag">Figma</div>
+              </div>
+            </div>
+            <div class="skill-category">
+              <h3>UX Skills</h3>
+              <div class="skill-list">
+                <div class="skill-tag">Prototyping</div>
+              </div>
+            </div>
+            <div class="skill-category">
+              <h3>Design</h3>
+              <div class="skill-list">
+                <div class="skill-tag">Web Design</div>
+                <div class="skill-tag">Front-End Developer</div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <h2>Interests</h2>
+          <div class="interest-item">
+            <span>Design Trends</span>
+          </div>
+          <div class="interest-item">
+            <span>Technology</span>
+          </div>
+        </div>
+
+        <div class="card">
+          <h2>Languages</h2>
+          <div class="interest-item">
+            <span>Persian (native) </span>
+          </div>
+          <div class="interest-item">
+            <span>English (Pre-intermediate)</span>
+          </div>
+        </div>
+      </div>
+      <footer></footer>
+    </div>
+  </body>
 </html>
